Foreign Key not null

--- a/Views/Sellers/Index.cshtml
+++ b/Views/Sellers/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="New" class="btn btn-primary">New</a>
 </p>
 <table class="table table-striped table-hover">
     <thead>
